various updates to implement actual api logic
